update app and resources, add old resources

--- a/copylink_1.01.00/index.html
+++ b/copylink_1.01.00/index.html
@@ -5,7 +5,9 @@
 <script src="scripts.js"></script>
 </head>
 <body>
+<img id="icon" src="copy.svg">
 <h3 id="title">Copylink</h3>
+<p id="info"></p>
 <textarea id="urlArea"></textarea>
 </body>
 </html>
