Remove spellcheck from textarea

--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,6 @@
     <img id="icon" src="copy.svg">
     <h3 id="title">Copylink</h3>
     <p id="info"></p>
-    <textarea id="urlArea"></textarea>
+    <textarea id="urlArea" spellcheck="false"></textarea>
 </body>
 </html>
